[AI Fix] (a11y ADA compliance): set home post-link color to #757575 for WCAG contrast

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -18,7 +18,7 @@
 // }
 
 .post-link{
-    color:  #a4a4a4;
+    color:  #757575;
     font-weight: 700;
     font-size: 50%;
     letter-spacing: 0px;
@@ -31,11 +31,11 @@
 }
 
 .post-link:visited{
-    color:  #a4a4a4;
+    color:  #757575;
 }
 
 .post-link:hover{
-    color:  #a4a4a4;
+    color:  #757575;
 }
 
 
